--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0-beta.13/angular.min.js"></script>
         <script src="js/controllers.js"></script>
 
-        <script src='common/lib/oauth-1-0a.js' type='text/javascript'></script>
+        <script src='common/lib/oauth-1.0a.js' type='text/javascript'></script>
         <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/rollups/hmac-sha1.js"></script>
         <script src="http://crypto-js.googlecode.com/svn/tags/3.1.2/build/components/enc-base64-min.js"></script>
 
